--- a/services.html
+++ b/services.html
@@ -190,18 +190,21 @@
 
 
 <!-- CTA -->
-<section class="section-spacer">
-    <div class="container text-center">
-        <h2 class="mb-3">Ready to begin?</h2>
-        <p class="mb-4">
-            If you’re ready for a calm, thoughtful space to reconnect with yourself,
-            you’re welcome to book a discovery call.
-        </p>
-        <a class="btn accent-btn mb-2" href="https://calendly.com/alexandraa-noein/30min">
-            Book a discovery call
-        </a>
+<section class="section-spacer cta-section">
+  <div class="container">
+    <div class="cta-inner">
+      <h2 class="mb-3">Ready to begin?</h2>
+      <p class="mb-4">
+        If you’re ready for a calm, thoughtful space to reconnect with yourself,
+        you’re welcome to book a discovery call.
+      </p>
+      <a class="btn accent-btn" href="https://calendly.com/alexandraa-noein/30min">
+        Book a discovery call
+      </a>
     </div>
+  </div>
 </section>
+
 
 </main>
 
