--- a/services.html
+++ b/services.html
@@ -198,7 +198,7 @@
         If you’re ready for a calm, thoughtful space to reconnect with yourself,
         you’re welcome to book a discovery call.
       </p>
-      <a class="btn accent-btn mb-2" href="https://calendly.com/alexandraa-noein/30min">
+      <a class="btn accent-btn" href="https://calendly.com/alexandraa-noein/30min">
         Book a discovery call
       </a>
     </div>
