--- a/services.html
+++ b/services.html
@@ -192,7 +192,7 @@
 <!-- CTA -->
 <section class="section-spacer cta-section">
   <div class="container">
-    <div class="cta-inner">
+    <div class="cta-inner mx-auto text-center">
       <h2 class="mb-3">Ready to begin?</h2>
       <p class="mb-4">
         If you’re ready for a calm, thoughtful space to reconnect with yourself,
