--- a/services.html
+++ b/services.html
@@ -127,65 +127,66 @@
 
 <!-- SERVICES GRID -->
 <section class="section-spacer">
-    <div class="container">
-<div class="row col-spacing-30 align-items-stretch equal-height-row">
+  <div class="container">
+    <div class="row col-spacing-30 align-items-stretch equal-height-row">
 
-            <div class="col-lg-6 d-flex">
-                <div class="content-card h-100">
-                    <h2 class="mb-3">Who I work with.</h2>
-                    <p>
-                        At noein, I support individuals and professionals who, like me, feel a pull toward something more aligned, a desire to reconnect with themselves, gain direction and build confidence in the choices ahead.
-                    </p>
-                </div>
-            </div>
-    
-
-            <div class="col-lg-6 d-flex">
-                <div class="content-card h-100">
-                    <h2 class="mb-3">My coaching style.</h2>
-
-        <p class="mb-4">
-            My approach is reflective, calm, and centred around awareness. I meet clients where they are, following their pace, their questions and what naturally arises in the space we create together.
-        </p>
-
-        <p>
-            When we understand the thoughts, patterns, and assumptions shaping our lives, we begin to act with greater clarity and intention.
-        </p>
-                </div>
-            </div>
-            
-            <div class="col-lg-12 d-flex">
-  <div class="content-card coaching-help-card w-100">
-    <div class="row align-items-center col-spacing-30">
-
-      <!-- LEFT: TEXT -->
-      <div class="col-lg-7">
-        <h2 class="mb-3">What coaching can help with.</h2>
-        <ul class="list-checks mb-0">
-          <li>Gain clarity on direction or next steps</li>
-          <li>Explore a sense of feeling stuck or off-track</li>
-          <li>Reconnect with values and priorities</li>
-          <li>Build confidence in your own judgement</li>
-          <li>Navigate change or transition</li>
-          <li>Understand unhelpful thought and behaviour patterns</li>
-          <li>Create more calm and alignment</li>
-        </ul>
-      </div>
-
-      <!-- RIGHT: IMAGE -->
-      <div class="col-lg-5">
-        <div class="coaching-help-image-wrap">
-          <img
-            src="assets/images/coaching.jpg"
-            alt="A moment of pause and clarity"
-            class="coaching-help-image"
-          >
+      <div class="col-lg-6 d-flex">
+        <div class="content-card h-100">
+          <h2 class="mb-3">Who I work with.</h2>
+          <p>
+            At noein, I support individuals and professionals who, like me, feel a pull toward something more aligned, a desire to reconnect with themselves, gain direction and build confidence in the choices ahead.
+          </p>
         </div>
       </div>
 
-    </div>
-  </div>
-</div>
+      <div class="col-lg-6 d-flex">
+        <div class="content-card h-100">
+          <h2 class="mb-3">My coaching style.</h2>
+          <p class="mb-4">
+            My approach is reflective, calm, and centred around awareness. I meet clients where they are, following their pace, their questions and what naturally arises in the space we create together.
+          </p>
+          <p>
+            When we understand the thoughts, patterns, and assumptions shaping our lives, we begin to act with greater clarity and intention.
+          </p>
+        </div>
+      </div>
+
+      <div class="col-lg-12 d-flex">
+        <div class="content-card coaching-help-card w-100">
+          <div class="row align-items-center col-spacing-30">
+
+            <!-- LEFT: TEXT -->
+            <div class="col-lg-7">
+              <h2 class="mb-3">What coaching can help with.</h2>
+              <ul class="list-checks mb-0">
+                <li>Gain clarity on direction or next steps</li>
+                <li>Explore a sense of feeling stuck or off-track</li>
+                <li>Reconnect with values and priorities</li>
+                <li>Build confidence in your own judgement</li>
+                <li>Navigate change or transition</li>
+                <li>Understand unhelpful thought and behaviour patterns</li>
+                <li>Create more calm and alignment</li>
+              </ul>
+            </div>
+
+            <!-- RIGHT: IMAGE -->
+            <div class="col-lg-5">
+              <div class="coaching-help-image-wrap">
+                <img
+                  src="assets/images/coaching.jpg"
+                  alt="A moment of pause and clarity"
+                  class="coaching-help-image"
+                >
+              </div>
+            </div>
+
+          </div> <!-- ✅ close inner row -->
+        </div> <!-- ✅ close combined card -->
+      </div> <!-- ✅ close col-lg-12 -->
+
+    </div> <!-- ✅ close OUTER row -->
+  </div> <!-- ✅ close OUTER container -->
+</section>
 
 
 
