--- a/contact.html
+++ b/contact.html
@@ -139,23 +139,28 @@
   </section>
 
 
-  <!-- 3) WORK WITH ME (single card underneath) -->
-<section class="section-spacer tight">
+  <!-- WORK WITH ME (small centred card) -->
+<section class="section-spacer contact-bottom-section">
   <div class="container">
-    <div class="content-card contact-work-card">
-      <h2 class="mb-3">Work with me.</h2>
-          <ul class="list-checks mb-2">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-10 col-lg-6">
+        <div class="content-card text-center contact-work-card">
+          <h2 class="mb-3">Work with me.</h2>
+
+          <ul class="list-checks text-left d-inline-block mb-3">
             <li>Free 30-minute discovery call</li>
             <li>60-minute online coaching sessions</li>
             <li>In person sessions also available</li>
-            <li>Evenings & weekends available</li>
+            <li>Evenings &amp; weekends available</li>
           </ul>
-          <p class="contact-reassurance mb-0">
-            Feel free to ask anything.
-          </p>
+
+          <p class="mb-0">Feel free to ask anything.</p>
         </div>
       </div>
+    </div>
+  </div>
 </section>
+
 
 
 </main>
