--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
 
 
   <!-- WORK WITH ME (small centred card) -->
-<section class="section-spacer contact-bottom-section">
+<section class="section-spacer contact-work-section">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12 col-md-10 col-lg-6">
