--- a/contact.html
+++ b/contact.html
@@ -154,7 +154,7 @@
             <li>Evenings &amp; weekends available</li>
           </ul>
 
-          <p class="mb-0">Feel free to ask anything.</p>
+          <p class="contact-note">Feel free to ask anything.</p>
         </div>
       </div>
     </div>
