--- a/index.html
+++ b/index.html
@@ -132,15 +132,11 @@
                 </p>
 
                 <p class="mb-3">
-                  At noein, you step into a space of personal reflection, where you can slow down, explore your thoughts, and rediscover what feels true for you.
+                  At noein, you step into a space of personal reflection, where you can tap into your thoughts, explore and rediscover what feels true for you.
                 </p>
 
                 <p class="mb-3">
                   The coaching process isn’t about being given answers; it’s about reconnecting with yourself and uncovering what’s already within you, through honest conversation and thoughtful insight.
-                </p>
-
-                <p class="mb-4">
-                  At noein coaching begins with space to think freely, to understand what truly matters and to become more aligned with who you are and how you choose to live.
                 </p>
 
                 <p class="mt-3 mb-0">
