--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <div class="content-card h-100">
 
                 <p class="mb-3">
-                  Hi, I’m Alexandra, a Transformative Coach, Architect and founder of Noein. I support people who feel a quiet pull to step away from expectations,
+                  Hi, I’m Alexandra, a Transformative Coach, Architect and founder of noein. I support people who feel a quiet pull to step away from expectations,
                   reconnect with themselves, and move forward with clarity and confidence, guided by their values.
                 </p>
 
