--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
    <main class="flex-fill">
 
   <!-- 1) HERO / JOURNEY IMAGE (full width, card-like) -->
-<section class="section-spacer tight">
+<section class="section-spacer tight contact-banner-section">
   <div class="container">
     <div class="contact-journey-wrap">
       <img
