--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
               <div class="content-card h-100">
 
                 <p class="mb-3">
-                  Hi, I’m Alexandra, a Transformative Coach, Architect and founder of noein. I support people who feel a quiet pull to step away from expectations,
+                  Hi, I’m Alexandra, a Transformative Coach, Architect and founder of <i class="blue-font-color">noein</i>. I support people who feel a quiet pull to step away from expectations,
                   reconnect with themselves, and move forward with clarity and confidence, guided by their values.
                 </p>
 
                 <p class="mb-3">
-                  At noein, you step into a space of personal reflection, where you can tap into your thoughts, explore and rediscover what feels true for you.
+                  At <i class="blue-font-color">noein</i>, you step into a space of personal reflection, where you can tap into your thoughts, explore and rediscover what feels true for you.
                 </p>
 
                 <p class="mb-3">
@@ -270,7 +270,7 @@
       <section class="section-spacer">
         <div class="container">
           <div class="content-card text-center h-100">
-            <h2 class="mb-3">If noein feels like the right space, let’s begin with a short conversation.</h2>
+            <h2 class="mb-3">If <i class="blue-font-color">noein</i> feels like the right space, let’s begin with a short conversation.</h2>
             <br>
 
             <div class="row align-items-center">
