--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <section class="section-spacer">
         <div class="container">
           <div class="content-card text-center h-100">
-            <h2 class="mb-3">If <i class="blue-font-color">noein</i> feels like the right space, let’s begin with a short conversation.</h2>
+            <h2 class="mb-3">If <span class="blue-font-color">noein> feels like the right space, let’s begin with a short conversation.</h2>
             <br>
 
             <div class="row align-items-center">
