--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
         <div class="container text-center">
 
             <h1 class="mb-3">noein <i class="blue-font-color">— A Space to Think</i>.</h1>
+          <h1 class="mb-3">
+  <span class="blue-font-color">noein</span> — <i>A Space to Think</i>.
+</h1>
             <h2 class="mb-3">Transformative coaching for individuals and professionals seeking clarity, confidence and alignment with what matters most.</h2>
         
         </div>
