--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
         <div class="container text-center">
 
             <h1 class="mb-3">noein <i class="blue-font-color">— A Space to Think</i>.</h1>
-          <h1 class="mb-3">
-  <span class="blue-font-color">noein</span> — <i>A Space to Think</i>.
-</h1>
+         
             <h2 class="mb-3">Transformative coaching for individuals and professionals seeking clarity, confidence and alignment with what matters most.</h2>
         
         </div>
@@ -130,7 +128,7 @@
               <div class="content-card h-100">
 
                 <p class="mb-3">
-                  Hi, I’m Alexandra, a Transformative Coach, Architect and founder of <i class="blue-font-color">noein</i>. I support people who feel a quiet pull to step away from expectations,
+                  Hi, I’m Alexandra, a Transformative Coach, Architect and founder of <i class="blue-font-color"noein. I support people who feel a quiet pull to step away from expectations,
                   reconnect with themselves, and move forward with clarity and confidence, guided by their values.
                 </p>
 
@@ -273,7 +271,7 @@
       <section class="section-spacer">
         <div class="container">
           <div class="content-card text-center h-100">
-            <h2 class="mb-3">If <<span class="blue-font-color">noein</span> feels like the right space, let’s begin with a short conversation.</h2>
+            <h2 class="mb-3">If <"blue-font-color">noein feels like the right space, let’s begin with a short conversation.</h2>
             <br>
 
             <div class="row align-items-center">
