--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <div class="content-card h-100">
 
                 <p class="mb-3">
-                  Hi, I’m Alexandra, a Transformative Coach, Architect and founder of <i class="blue-font-color"noein</i>. I support people who feel a quiet pull to step away from expectations,
+                  Hi, I’m Alexandra, a Transformative Coach, Architect and founder of <i class="blue-font-color">noein</i>. I support people who feel a quiet pull to step away from expectations,
                   reconnect with themselves, and move forward with clarity and confidence, guided by their values.
                 </p>
 
