--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.noein.co.uk/about">
     <meta property="og:title" content="noein | About Alexandra - transformative coach">
-    <meta property="og:description" content="Learn about Alexandra, an architect and Transformative Coach, and the story behind noein – a calm coaching space for clarity, confidence and meaningful change.">
-    <meta property="og:image" content="https://www.noein.co.uk/assets/images/noein-logo@2x.png">
+    <meta property="og:description" content="Learn about Alexandra, an architect and Transformative Coach, and the story behind  – a calm coaching space for clarity, confidence and meaningful change.">
+    <meta property="og:image" content="https://www..co.uk/assets/images/-logo@2x.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="noein | About Alexandra - transformative coach">
     <meta name="twitter:description" content="Learn about Alexandra, an architect and Transformative Coach, and the story behind noein – a calm coaching space for clarity, confidence and meaningful change.">
@@ -96,16 +96,16 @@
         <!-- LEFT: INTRO TEXT (NO CARD) -->
         <div class="col-lg-7">
           <h1 class="mb-3">I’m <i class="blue-font-color">Alexandra</i>.</h1>
-          <h4 class="mb-3">A Transformative Coach, Architect, and the founder of noein.</h4>
+          <h4 class="mb-3">A Transformative Coach, Architect, and the founder of <i class="blue-font-color">noein</i>.</h4>
 
           <p class="mb-3">My interest in coaching began while trying to find my place in architecture. For a long time, I felt pressure to grow in my chosen field in a way that felt strictly technical and predefined. As I advanced in that world, I realised the skills I gravitated towards were the human ones: listening, guiding and helping others make sense of their thoughts. </p>
           <p class="mb-3">It was only when I accepted that my interests might take a different form and that they were still valid, still mine and could be used meaningfully, that something shifted. With that acceptance came a sense of lightness and confidence, and a release from the stress of trying to force myself into a specialty that didn’t truly reflect who I am. </p>
           <p class="mb-3">Over the years, I had channelled my passion for personal and professional development in different mentoring programmes, both as a student and a professional. Through experience, my inclination to support others, became a natural path forward. As I trained as a Transformative Coach with the Animas Centre for Coaching, I realised that I didn’t have to choose between these two sides of myself, I could bring them together meaningfully.</p>
           <p class="mb-3">I soon began to see that what I had to offer my workplace was exactly this perspective. I introduced a focus on personal development within the architectural practice, actively encouraging to cultivate a growth culture through mentoring and coaching at the office.</p>
-          <p class="mb-3">However, my aspirations as a coach went beyond that. I founded noein as a natural extension of my architectural mindset: applying my soft skills to support people in finding clarity, confidence and alignment between who they are and what they do.</p>
+          <p class="mb-3">However, my aspirations as a coach went beyond that. I founded <i class="blue-font-color">noein</i> as a natural extension of my architectural mindset: applying my soft skills to support people in finding clarity, confidence and alignment between who they are and what they do.</p>
 
           <p class="mb-0">
-            noein is the space I once needed myself: a safe place to explore, reflect and reconnect
+            <i class="blue-font-color">noein</i> is the space I once needed myself: a safe place to explore, reflect and reconnect
             with what feels true to me.
           </p>
         </div>
