--- a/services.html
+++ b/services.html
@@ -93,7 +93,7 @@
           </p>
 
           <p class="mb-0">
-            Coaching at noein is for individuals and professionals who want to understand
+            Coaching at <span class="blue-font-color">noein</span> is for individuals and professionals who want to understand
             themselves more deeply and make choices that feel aligned rather than imposed.
           </p>
         </div>
@@ -134,7 +134,7 @@
         <div class="content-card h-100">
           <h2 class="mb-3">Who I work with.</h2>
           <p>
-            At noein, I support individuals and professionals who, like me, feel a pull toward something more aligned, a desire to reconnect with themselves, gain direction and build confidence in the choices ahead.
+            At <span class="blue-font-color">noein</span>, I support individuals and professionals who, like me, feel a pull toward something more aligned, a desire to reconnect with themselves, gain direction and build confidence in the choices ahead.
           </p>
         </div>
       </div>
