--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
               <div class="content-card h-100">
 
                 <p class="mb-3">
-                  Hi, I’m Alexandra, a Transformative Coach, Architect and founder of <span class="blue-font-color">noein</span>. I support people who feel a quiet pull to step away from expectations,
+                  Hi, I’m Alexandra, a Transformative Coach, Architect and founder of <span class="brand-name">noein</span>. I support people who feel a quiet pull to step away from expectations,
                   reconnect with themselves, and move forward with clarity and confidence, guided by their values.
                 </p>
 
                 <p class="mb-3">
-                  At <span class="blue-font-color">noein</span>, you step into a space of personal reflection, where you can tap into your thoughts, explore and rediscover what feels true for you.
+                  At <span class="brand-name">noein</span>, you step into a space of personal reflection, where you can tap into your thoughts, explore and rediscover what feels true for you.
                 </p>
 
                 <p class="mb-3">
@@ -271,7 +271,7 @@
       <section class="section-spacer">
         <div class="container">
           <div class="content-card text-center h-100">
-            <h2 class="mb-3">If <span class="blue-font-color">noein</span> feels like the right space, let’s begin with a short conversation.</h2>
+            <h2 class="mb-3">If <span class="brand-name">noein</span> feels like the right space, let’s begin with a short conversation.</h2>
             <br>
 
             <div class="row align-items-center">
