--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
         <!-- LEFT: INTRO TEXT (NO CARD) -->
         <div class="col-lg-7">
           <h1 class="mb-3">I’m <i class="blue-font-color">Alexandra</i>.</h1>
-          <h4 class="mb-3">A Transformative Coach, Architect, and the founder of noein.</h4>
+          <h4 class="mb-3">A Transformative Coach, Architect, and the founder of <span class="brand-name">noein</span>.</h4>
 
           <p class="mb-3">My interest in coaching began while trying to find my place in architecture. For a long time, I felt pressure to grow in my chosen field in a way that felt strictly technical and predefined. As I advanced in that world, I realised the skills I gravitated towards were the human ones: listening, guiding and helping others make sense of their thoughts. </p>
           <p class="mb-3">It was only when I accepted that my interests might take a different form and that they were still valid, still mine and could be used meaningfully, that something shifted. With that acceptance came a sense of lightness and confidence, and a release from the stress of trying to force myself into a specialty that didn’t truly reflect who I am. </p>
@@ -105,7 +105,7 @@
           <p class="mb-3">However, my aspirations as a coach went beyond that. I founded <span class="blue-font-color">noein</span> as a natural extension of my architectural mindset: applying my soft skills to support people in finding clarity, confidence and alignment between who they are and what they do.</p>
 
           <p class="mb-0">
-  <span class="blue-font-color">noein</span> is the space I once needed myself: a safe place to explore, reflect and reconnect
+  <span class="brand-name">noein</span> is the space I once needed myself: a safe place to explore, reflect and reconnect
   with what feels true to me.
 </p>
         </div>
