--- a/services.html
+++ b/services.html
@@ -78,7 +78,7 @@
       <!-- LEFT: TEXT (NOT IN A CARD) -->
       <div class="col-lg-7 mb-4 mb-lg-0 d-flex">
         <div class="services-text-block">
-          <h1 class="mb-3">Coaching with <span class="brand-name">noein</span>.</h1>
+          <h1 class="mb-3">Coaching with <i class="blue-font-color">noein</i>.</h1>
           <h3 class="mb-3">A space to think. A space to understand. A space to become.</h3>
 			
 
